3.22
	- added debug class HTTP::OAI::Debug
	- added check in 01parse test case for file open
	- added 000xml_sax.pl test case for basic XML::SAX function
	- added "trace" and "saxtrace" options to oai_browser.pl

3.21
	- added test case for bad characters
	- fix bad chars as they arrive, to avoid buffering an entire response if it
	  contains bad chars
	- some code cleanup

3.20
	- use strict UTF-8 (suggested by Dennis Vierkant)

3.19

3.18
	- broke apart Metadata from Encapsulation
	- now uses XML::SAX in Response, rt.cpan.org ticket #27191
	- shifted all use's into HTTP::OAI
	- added use strict(), use warnings() to every module
	- shifted $VERSION in HTTP::OAI
	- href attribute lookup in METS should be namespaced too
	- added mets test case
	- fixed test cases for changed XML output

3.17

	- Removed next() call from oai_browser for List*
	- Fixed missing HTTP:: in ListIdentifiers documentation
	- Fixed missing namespace initialization in SAX
	- Fixed bug in request where '?' wasn't being removed

3.16

  - Fixed recursion bug in onRecord
	- No longer need to call next() for onRecord (Harvester will do it for you)
	- Added PartialList module (ListIdentifiers, ListRecords, ListSets)

3.15

	- Several bug fixes, particularly catching and throwing parsing errors
	- Added onRecord argument to ListRecords, ListIdentifiers, ListSets
	- INCOMPATIBLE: Changed error handling, so now only need to check after the
		next() loop for both initial errors and flow errors
	- Added is_deleted method to Record and Header

3.14

	- By default oai-lib now fixes bad UTF-8 characters (replacing with '?')
	  To disable this set $HTTP::OAI::UserAgent::IGNORE_BAD_CHARS to 0
	- Fixed bug where a partially downloaded utf-8 character could cause a harvest to fail

3.13

3.12
	- BUG: Static repository was re-fetching the source for every request