@@ -4,3 +4,4 @@ Makefile.old
 MANIFEST.bak
 ^blib
 .tar.gz$
+pm_to_blib
