@@ -13,6 +13,7 @@ WriteMakefile(
 	PREREQ_PM	=> {
 				'Encode' => 2.12,
 				'XML::LibXML' => 1.60,
+				'XML::LibXML::SAX' => 0,
 				'XML::SAX::Base' => 1.00,
 				'URI' => 0,
 				'HTTP::Request' => 0,
